# slicer-builds

./: .dockerignore  .gitignore  README.md  compose.yaml  slicerctl
.github/scripts/: cache-fingerprint.sh  (+2 more)
BambuStudio/: conditional_visibility.json  def_visibility_versions.json  dump_versions.json  filament.json  machine.json  print_config_def.json  process.json  slicer_binary_versions-arm.json  slicer_binary_versions.json  v02.03.00.70
ElegooSlicer/: def_visibility_versions.json  dump_versions.json  process.json
OrcaSlicer/: conditional_visibility.json  def_visibility_versions.json  dump_versions.json  filament.json  machine.json  print_config_def.json  process.json  slicer_binary_versions-arm.json  slicer_binary_versions.json
PrusaSlicer/: conditional_visibility.json  def_visibility_versions.json  dump_versions.json  filaments.json  print settings.json  print_config_def.json  printers.json  process.json  slicer_binary_versions-arm.json  slicer_binary_versions.json
QIDIStudio/: slicer_binary_versions-arm.json
SuperSlicer/: slicer_binary_versions.json
build_slicer_binaries/: apply_patches.sh
docker/: Dockerfile
dump_slicer_steps/: apply_patches.sh
generate_defs_visibility/: parse-approach.py  pyproject.toml
generate_defs_visibility/cli/: __main__.py  map_missing_variables.py  parse_conditions.py
tools/: apply_versioned_patches.sh  build_cmake_target.sh  push_with_rebase_retry.sh  run_config_dump.sh  slicerctl.py  stage_bundle.py  stamp_version_date.sh  update_slicer_index.py  validate_config_artifacts.py  verify_orca_version.sh
(+291 files in other folders)
