[project]
name = "generate-defs-visibility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.4.2",
    "openai>=1.76.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "tree-sitter>=0.24.0",
    "tree-sitter-cpp>=0.23.4",
]

[project.scripts]
generate-defs-visibility = "cli.__main__:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
